--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -7,6 +7,9 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/mixsport" />
+            android:src="@drawable/lunch" 
+             android:width="-50dp"
+             android:height="-50dp"
+            />
     </item>
 </layer-list>
