--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/black" />
+    <item android:drawable="@color/red" />
 
     <!-- You can insert your own image assets here -->
     <item>
         <bitmap
+            
             android:gravity="center"
-            android:src="@drawable/lunch" 
-             android:width="-50dp"
-             android:height="-50dp"
+            android:src="@drawable/sports" 
             />
     </item>
+    <item  android:bottom="-400dp">
+    <bitmap
+        android:gravity="center"
+        android:src="@drawable/mrsport" />
+</item>
 </layer-list>
