--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -5,8 +5,8 @@
 
     <!-- You can insert your own image assets here -->
     <item>
-        <bitmap
+        <bitmap    
             android:gravity="center"
-            android:src="@drawable/lunch" />
+            android:src="@drawable/sports" />
     </item>
 </layer-list>
